--- a/sorelTP2/src/main/resources/messages_fr.properties
+++ b/sorelTP2/src/main/resources/messages_fr.properties
@@ -43,3 +43,7 @@ jeu.lier.info =Selectionnez une jeu et la console avec laquelle vous voulez lier
 jeu.lier.correct = <strong>Correct!</strong> Votre enregistrement a été pris en compte.
 jeu.lier.error =<strong>Oups...!</strong> problème avec votre enregistrement, veuillez contacter l'adminstrateur
 jeu.lier.button =lier
+
+error.lier.message =<strong>Oups...!</strong>
+error.lier.indication =Une erreur est surevenue pendant le chargement de la page <br> <strong> Code d'erreur : 
+error.lier.button =Acceuil 
