add rest fucntion

--- a/sorelTP2/src/main/resources/messages_fr.properties
+++ b/sorelTP2/src/main/resources/messages_fr.properties
@@ -1,11 +1,12 @@
 welcome=Bienvenue sur l'application de gestion des collections de jeux video
+site.title =Collection Jeux videos
 console.creer.title = Creer ou editer une console
 console.creer.enregistrerconsole =Console enregistrées 
 console.creer.creerconsole =Creer une console
 console.creer.boutoncharger =Charger
 console.creer.indication = Vous pouvez editer une console en selectionnant la console et en cliquant sur <b>charger</b>
 console.creer.correct =  <strong>Correct!</strong> Votre enregistrement a été pris en compte.
-console.creer.error =  <strong>Oups...!</strong> problème avec votre enregistrement, verifiez que la console que vous essayez de creer n'existe pas deja
+console.creer.error =  <strong>Oups...!</strong> problème avec votre enregistrement, verifiez que la console que vous essayez de creer n'existe pas deja et que tous les champs obligatoires sont biens renseignés
 console.creer.nom.value =Nom
 console.creer.nom.placeholder = Entrez le nom de la console
 console.creer.fabricant.value =Fabricant
@@ -25,7 +26,7 @@ jeu.creer.creer =Creer un jeu
 jeu.creer.boutoncharger =Charger
 jeu.creer.indication = Vous pouvez editer un jeu en selectionnant le jeu et en cliquant sur <b>charger</b>
 jeu.creer.correct =  <strong>Correct!</strong> Votre enregistrement a été pris en compte.
-jeu.creer.error =  <strong>Oups...!</strong> problème avec votre enregistrement, verifiez que le jeu que vous essayez de creer n'existe pas deja
+jeu.creer.error =  <strong>Oups...!</strong> problème avec votre enregistrement, verifiez que le jeu que vous essayez de creer n'existe pas deja et que tous les champs obligatoires sont biens renseignés
 jeu.creer.nom.value =Nom
 jeu.creer.nom.placeholder = Entrez le nom du jeu
 jeu.creer.fabricant.value =Editeur
@@ -47,3 +48,43 @@ jeu.lier.button =lier
 error.lier.message =<strong>Oups...!</strong>
 error.lier.indication =Une erreur est surevenue pendant le chargement de la page <br> <strong> Code d'erreur : 
 error.lier.button =Acceuil 
+
+user.creer.title = Creer ou editer un user
+user.creer.enregistrer =Utilisateurs enregistrés 
+user.creer.creeruser =Creer un utilisateur
+user.creer.indication = Vous pouvez editer  l'utilisateur en selectionnant l'utilisateur et en cliquant sur <b>charger</b>
+user.creer.correct =  <strong>Correct!</strong> Votre enregistrement a été pris en compte.
+user.creer.error =  <strong>Oups...!</strong> problème avec votre enregistrement, verifiez que l'utilisateur que vous essayez de creer n'existe pas deja et que tous les champs obligatoires sont biens renseignés
+user.creer.nom.value =Nom
+user.creer.nom.placeholder = Entrez le nom de l'utilisateur
+user.creer.prenom.value =Prénom
+user.creer.prenom.placeholder = Entrez le prénom de l'utilisateur
+user.creer.login.value =Login 
+user.creer.login.placeholder = Entrez le Login de l'utilisateur
+user.creer.pass.value =Mot de passe
+user.creer.confirm.value =Confirmer le mot de passe
+user.creer.date.value =Date de naissance
+user.creer.confirm.error.value =le mot de passe ne correspond pas
+
+user.list.title =liste les utilisateurs
+user.list.jeux =listes des jeux
+user.list.jeu =liste des jeux d'un user
+user.list.indication = Selectionnez l'utilisateur dont vous voulez afficher la liste des jeux et cliquez sur <b>charger</b>
+user.list.add.jeu =Ajouter un jeu
+user.list.delete.jeu =supprimer
+user.list.select = selectionnez
+
+menu.console.title =Consoles
+menu.console.m1 =Create/Editer
+menu.console.m2 =Chercher
+menu.console.m3 =Lister
+menu.jeu.title =Jeux videos
+menu.jeu.m1 =Create/Editer
+menu.jeu.m2 =Chercher
+menu.jeu.m3 =Lister
+menu.jeu.m4 =Lier à une console
+menu.user.title =Users
+menu.user.m1 =Create/Editer
+menu.user.m2 =Lister
+menu.user.m3 =Lister les jeux
+user.list.add.jeu.aj =Ajouter
