clean and update quality code

--- a/sorelTP2/src/main/resources/messages_fr.properties
+++ b/sorelTP2/src/main/resources/messages_fr.properties
@@ -98,6 +98,6 @@ create.compte.value=creer un compte
 
 login.error.value=Votre nom d'utilisateur et votre mot de passe sont invalides.
 login.logout.value=Vous avez été déconnecté avec succès.
-
+fichier.erreur.size=Ce fichier depasse la limite autorisée (10 mb), il ne sera pas pris en compte
 jeu.list.public.title=Les jeux partagés par
 jeu.list.public.partage=Partager votre collection avec ce lien
